--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -24,6 +24,7 @@
         .search {
             display: flex;
             flex-direction: row;
+            justify-content: space-between;
             color: black;
             background-color: white;
             border-radius: 50px;
@@ -35,6 +36,9 @@
             img{
                 width: 20px;
                 height: 20px;
+                margin-right: 20px;
+                margin-left: 10px;
+
             }
 
             p{
@@ -53,6 +57,7 @@
             
 
             @include mobile {
+                font-size: 12px;
                 align-items: center;
                 gap: 20px;
                 padding: 10px;
