--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -10,6 +10,7 @@
     max-width: 1366px;
     height: 100%;
     margin: auto;
+    z-index: 2;
 
     .textContainer {
       width: 50%;
@@ -42,6 +43,7 @@
       }
 
       .buttons {
+        z-index: 999;
         button {
           padding: 20px;
           border: 1px solid white;
@@ -65,6 +67,7 @@
     position: absolute;
     top: 0;
     right: 0;
+    z-index: 1;
 
     @include mobile {
       height: 50%;
@@ -83,10 +86,12 @@
   .slidingTextContainer {
     position: absolute;
     font-size: 50vh;
-    bottom: -120px;
+    bottom: -100px;
     white-space: nowrap;
     color: #ffffff09;
     width: 50%;
     font-weight: bold;
+    z-index: 1;
+    
   }
 }
